--- a/@ExileServer/config.cfg
+++ b/@ExileServer/config.cfg
@@ -1,16 +1,16 @@
-hostname        					= "[W-W]Return to Survival-Chernarus Redux |HARDCORE|";
+hostname        					= "YOUR SERVER NAME";
 password         					= "";
-passwordAdmin      					= "5150";
-serverCommandPassword				= "wetwerks";
+passwordAdmin      					= "YOUR ADMMIN PASSWORD";
+serverCommandPassword				= "YOUR SERVER COMMAND PASSWORD";
 logFile            					= "server.log";
-verifySignatures   					= 1; // Do NOT use verifySignatures=2! It costs too many FPS
+verifySignatures   					= 1; 									// Do NOT use verifySignatures=2! It costs too many FPS
 BattlEye            				= 1;
-requiredBuild 						= 143869; // 1.80 stable
+requiredBuild 						= 143869; 								// 1.80 stable
 allowedLoadFileExtensions[] 		= {:};
 allowedPreprocessFileExtensions[] 	= {"sqf"};
 allowedHTMLLoadExtensions[] 		= {"html"};
 motdInterval 						= 5;
-maxPlayers 							= 30;
+maxPlayers 							= 30; 									// I changed this to 30 max
 voteMissionPlayers 					= 200;
 voteThreshold 						= 200;
 allowedVoteCmds[] 					= {};
@@ -34,7 +34,7 @@ class Missions
 {
 	class Exile
 	{
-		template = Exile.ChernarusRedux;  // Exile.Namalsk, Exile.Altis, Exile.Tanoa, ExileEscape.Altis, ExileEscape.Tanoa
+		template = Exile.ChernarusRedux;  // file name that is in mpmissions folder
 
 		// do NOT use custom difficulties!
 		// Use either ExileRegular or ExileHardcore
