--- a/@ExileServer/extdb3-conf.ini
+++ b/@ExileServer/extdb3-conf.ini
@@ -21,6 +21,6 @@ Flush = true;
 [exile]
 IP = 127.0.0.1
 Port = 3306
-Username = wetwerks
-Password =  wetwerks
+Username = SQL username
+Password =  SQL password
 Database = exile
